public/Home/Home.css
html {
    margin: 0;
    height: 100%;
   
    
}
body{
    height: 100vh;
}
*,*::after, *::before{
    box-sizing: border-box;
}

#text {
    max-height: 64px;
    padding-left: 10px;
}

#main {
    padding-top: 4vh;
    min-height: calc(100vh- 118px- 118px);
    background-image: url("https://images.unsplash.com/photo-1471882243907-ba1cf91b79ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2301&q=80");
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    height:800px;
    position: relative;
   display: block;
}
#main > h3{
  font-family: 'Amatic SC', cursive;
  float: left;
  font-weight: bolder;
  font-size: 35px;
  margin-left: 20px;
  margin-bottom: 20% ;
  width: 675px;
  
}

#scrabble{
  margin-top: 30%;
  margin-left: 50%;
  font-family: 'Amatic SC', cursive;
  font-size: 50px;

}

#navB{
  font-family: 'Amatic SC', cursive;
  word-spacing: 1rem;
  font-size: 30px;
  font-weight: bold;
  padding: 0rem;
}

 a:link, a:visited{
  color: white;
  font-size:25px ;
  padding: 0rem;
}

.shadow.navbar {
  position: relative;
  box-shadow: 0 3px 4px rgb(0, 0, 0, 0.3), 0 0 40px rgb(0, 0, 0, 0.1) inset;
}

.shadow::before{
  content: "";
  position: absolute;
  z-index: -1;
  box-shadow: 0 0 20px  rgb(0, 0, 0, 0.8);
}



/* sectionTwo */
#aUsHeadline{
  margin-top: 5%;
    display: flex;
  justify-content: flex-start;
  margin-left: 2rem;
}

#ourMissionHL{
  margin-left: 40%;
  font-weight: bolder;
  margin-bottom: 5%;
}

/* .about_Us{
  margin-bottom: 5%;
} */

#pointer {
  width: 100%;
  height: 70px;
  position: relative;
  background: rgb(12, 148, 172);
}
#pointer:after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 0;
  height: 70px; 
  border-left: 20px solid rgb(12, 148, 172);
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
}
 #pointer:before {
  content: "";
  position: absolute;
  right: -20px;
  bottom: 0;
  width: 0;
  height: 70px;
  border-left: 20px solid rgb(12, 148, 172);
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
}  

#ourMission,#WhoWeR{
  display: inline;
 
}

#ourMission{
  display: flex;
  justify-self: left;
  margin-left: 15%;
  width: 400px;
  margin-right: 3rem;

}

#missionPic{
  background-image: url("/public/assets/pictures/katrina-wright-yMg_SMqfoRU-unsplash.jpg");
 height: 400px;
 background-repeat: no-repeat;
 width: 700px;
 
}

#sectionTwo{
  margin-left: 10%;
  display: inline;
}

#whoWeR{
  background-color: rgba(183, 212, 241, 0.774);
}

#whoWeRparagraph{
  margin-left:15%;
  margin-right: 15%;
}

#divider{
  width: 100%;
  height: 100px;
  background-color:rgb(12, 148, 172);
}


/* footer */

footer {
  display: block;
    width: 100%;
    height: 50px;
    background-color: white;
    color: black;
    text-align: center;
    font-family: 'Amatic SC', cursive;
 }

footer h3 {
    margin-bottom: 30px;
    text-align: center;
}
#footerFlex{
 margin: auto;
  
}

footer .footer-above {
    padding-top: 20px;
    text-align: center;
}

.footer-above{
  display: flex;
}

footer .footer-col {
    margin-bottom: 30px;
}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
    align-content: center;
}

.fa-fw {
    width: 1.28571429em;
    text-align: center;
}

.fa {
    display: inline-block;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    color: rgb(5, 5, 5);
}

.list-inline {
    padding-left: 0;
    list-style: none;
    margin-left: -5px;
}

.list-inline>li {
    display: inline-block;
    padding-left: 5px;
    padding-right: 5px;
    align-content: center;
}

#linksColor> ul>li{
  font-family: 'Amatic SC', cursive;
  color: black;
    /* color: white; */
    font-size: 25px;
    padding: 0rem;
}
/* .text{
font-family: 'Amatic SC', cursive;
  font-weight: 300;
  font-size: 50px;
  color: rgb(14, 11, 11);
  word-spacing: 0.5rem;
}
.dud{
  color: #0e0808;
}

 

